--- a/style.css
+++ b/style.css
@@ -77,3 +77,30 @@ body{
     text-decoration: none;
     margin-top: 100px;
 }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: content-box;
+  }
+  .buttons {
+    min-width: 100px;
+    display: flex;
+  }
+  
+  .buttons a {
+    text-decoration: none;
+    font-size: 28px;
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    background: #314652;
+    color: #f1f1f1;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, .5);
+    transition: all .4s ease-in-out;
+  }
+  
+  .buttons a:hover {
+    transform: scale(1.2);
+  }
