--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body{
     color: #000;
     margin: 0;
     padding: 0;
+    min-height: 100vh;
+    display: flex;
+    align-self: center;
+    justify-content: center;
 }
 .swiper{
     width: 100%;
