--- a/style.css
+++ b/style.css
@@ -10,10 +10,11 @@ body{
     color: #000;
     margin: 0;
     padding: 0;
-    min-height: 100vh;
-    display: flex;
-    align-self: center;
-    justify-content: center;
+     background-image: radial-gradient( circle 767px at 10.2% 22.1%,  rgba(11,218,81,1) 0%, rgba(0,191,255,1) 90% );
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .swiper{
     width: 100%;
@@ -121,19 +122,26 @@ body{
 .carrucel span:hover img{
     transform: translateY(-50px) scale(1.2);
 }
-.buttons{
-    min-width: 700p;
-    display: flex;
-    justify-content: space-around;
+.buttons {
+  min-width: 700px;
+  display: flex;
+  justify-content: space-around;
 }
-.buttons a{
-    text-decoration: none;
-    font-size: 28px;
-    width: 60px;
-    height: 60px;
-    line-height: 60px;
-    text-align: center;
-    background-color: aqua;
-    color: aliceblue;
-    border-radius: 50%;
+
+.buttons a {
+  text-decoration: none;
+  font-size: 28px;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  text-align: center;
+  background: #314652;
+  color: #f1f1f1;
+  border-radius: 50%;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, .5);
+  transition: all .4s ease-in-out;
+}
+
+.buttons a:hover {
+  transform: scale(1.2);
 }
