--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ body{
   height: 60px;
   line-height: 60px;
   text-align: center;
-  background: #314652;
+  background: #dimgray;
   color: #f1f1f1;
   border-radius: 40%;
   box-shadow: 2px 5px 5px rgba(0, 0, 0, .5);
