--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ body{
 .buttons {
   min-width: 100px;
   display: flex;
-  justify-content: space-around;
+  justify-content: 10px;
 }
 
 .buttons a {
