--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ body{
     font-size: 20px;
     color: #FFB900;
 }
+.icons i{
+    font-size: 20px;
+    color: #FFB900;
+}
 .icons img{
     width: 120px;
 }
