--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     color: #000;
     margin: 0;
     padding: 0;
-  min-height: 50vh;
+  min-height: 30vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -27,15 +27,35 @@ body{
     padding: 40px;
     text-align: center;
 }
+.heart-checkbox {
+    position: relative;
+    cursor: pointer;
+}
+
+.heart-checkbox input[type="checkbox"] {
+    display: none;
+}
+
+.heart-checkbox i {
+    font-size: 24px;
+    color: #ccc; /* Color del corazón cuando no está seleccionado */
+    transition: color 0.3s ease;
+}
+
+.heart-checkbox input[type="checkbox"]:checked + i {
+    color: red; /* Color del corazón cuando está seleccionado */
+}
 .icons{
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 40px;
 }
-.icons i{
-    font-size: 20px;
-    color: #FFB900;
+.icons a{
+    font-size: 24px; /* Tamaño del icono */
+    color: #FFB900; /* Color del icono */
+    text-decoration: none; /* Elimina el subrayado del enlace */
+    display: inline-block; /* Asegura que el icono se muestre en línea */
 }
 .icons img{
     width: 120px;
@@ -69,12 +89,12 @@ body{
 }
 .btn-1{
     display: inlie-block;
-    padding: 5px 3px;
+    padding: 15px 25px;
     border: 1px solid #FFB900;
-    border-radius: 10px;
+    border-radius: 50px;
     color: #FFB900;
     text-decoration: none;
-    margin-top: 10px;
+    margin-top: 50px;
 }
 
 *{
@@ -122,7 +142,7 @@ body{
     transform: translateY(-50px) scale(1.2);
 }
 .buttons {
-  min-width: 80px;
+  min-width: 100px;
   display: flex;
   justify-content: 10px;
 }
