--- a/somos.css
+++ b/somos.css
@@ -1,46 +1,56 @@
-*{
+* {
     padding: 0;
     margin: 0;
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
 }
+body{
+    font-family: Helvetica Neue, Helvetica;
+}
 
-nav{
-    background: #2fcdcd;
+nav {
+    background:  #323232;
     height: 80px;
     width: 100%;
     position: relative;
     z-index: 2;
 }
-.enlace{
+
+.enlace {
     position: absolute;
     padding: 10px 50px;
 }
-.logo{
+
+.logo {
     height: 60px;
 }
-nav ul{
+
+nav ul {
     float: right;
     margin-right: 20px;
 }
-nav ul li{
+
+nav ul li {
     display: inline-block;
     line-height: 80px;
     margin: 0 5px;
 }
-nav ul li a{
+
+nav ul li a {
     color: #fff;
     font-size: 18px;
     padding: 7px 13px;
     border-radius: 3px;
     text-transform: uppercase;
 }
-li a.active, li a:hover{
+
+li a.active, li a:hover {
     background: #000090;
     transition: .5s;
 }
-.checkbtn{
+
+.checkbtn {
     font-size: 30px;
     color: #fff;
     float: right;
@@ -49,36 +59,42 @@ li a.active, li a:hover{
     cursor: pointer;
     display: none;
 }
-#check{
+
+#check {
     display: none;
 }
-section{
+
+section {
     background: url(Fondo.mp4);
     background-size: cover;
     background-position: center center;
     height: calc(100vh - 80px);
 }
+
 .texto {
     position: relative;
     z-index: 1;
     color: #fff;
-    width: 60%; /* Ajusta el tamaño según sea necesario */
-    max-width: 800px; /* Máximo ancho para el contenedor */
+    width: 80vw; /* Ajusta el tamaño según sea necesario */
     margin: 0 auto; /* Centrar el contenedor horizontalmente */
     text-align: left;
-    padding: 100px;
-    overflow-y: auto; /* Habilitar scroll interno si es necesario */
-    max-height: 100%; /* Limitar la altura máxima */
+    padding: 5vh 5vw; /* Padding relativo al tamaño de la pantalla */
+    height: auto;
+    max-height: none; /* Elimina la altura máxima */
+    overflow: hidden; /* Elimina el scroll */
 }
+
 .texto h1 {
-    font-size: 1.5rem;
+    font-size: 2.5vw; /* Tamaño de fuente relativo al ancho de la ventana */
     color: #f3f3f3;
 }
+
 .texto p {
-    font-size: 1rem;
+    font-size: 1.5vw; /* Tamaño de fuente relativo al ancho de la ventana */
     color: #f3f3f3;
 }
-video{
+
+video {
     position: absolute;
     top: 0;
     left: 0;
@@ -86,7 +102,8 @@ video{
     height: 100%;
     object-fit: cover;
 }
-.capa{
+
+.capa {
     position: absolute;
     top: 0;
     left: 0;
@@ -97,20 +114,29 @@ video{
     mix-blend-mode: overlay;
 }
 
-@media (max-width: 952px){
-    .enlace{
+@media (max-width: 952px) {
+    .enlace {
         padding-left: 20px;
     }
-    nav ul li a{
+    nav ul li a {
         font-size: 16px;
+    }
+    .texto {
+        padding: 5vh 3vw; /* Ajusta el padding para pantallas más pequeñas */
+    }
+    .texto h1 {
+        font-size: 4vw; /* Ajusta el tamaño de la fuente para pantallas más pequeñas */
+    }
+    .texto p {
+        font-size: 3vw; /* Ajusta el tamaño de la fuente para pantallas más pequeñas */
     }
 }
 
-@media (max-width: 858px){
-    .checkbtn{
+@media (max-width: 858px) {
+    .checkbtn {
         display: block;
     }
-    ul{
+    ul {
         position: fixed;
         width: 100%;
         height: 100vh;
@@ -120,19 +146,19 @@ video{
         text-align: center;
         transition: all .5s;
     }
-    nav ul li{
+    nav ul li {
         display: block;
         margin: 50px 0;
         line-height: 30px;
     }
-    nav ul li a{
+    nav ul li a {
         font-size: 20px;
     }
-    li a:hover, li a.active{
+    li a:hover, li a.active {
         background: none;
         color: red;
     }
-    #check:checked ~ ul{
-        left:0;
+    #check:checked ~ ul {
+        left: 0;
     }
 }
