--- a/style.css
+++ b/style.css
@@ -73,6 +73,11 @@ body{
     color: #FFFFFF;
     text-transform: uppercase;
 }
+.product-text h2{
+    font-size: 15px;
+    color: #FFFFFF;
+    text-transform: uppercase;
+}
 .product-text p{
     font-size: 12px;
     color: #f3f3f3;   
