--- a/intento.css
+++ b/intento.css
@@ -88,6 +88,7 @@ section {
 
 .texto {
     position: relative;
+    top:20px;
     z-index: 1;
     color: #fff;
     width: 80vw; /* Ajusta el tamaño según sea necesario */
