--- a/intento.css
+++ b/intento.css
@@ -5,7 +5,15 @@
     list-style: none;
     box-sizing: border-box;
 }
+@font-face {
+    font-family: 'Helvetica Neue';
+    src: url('path-to-your-fonts/HelveticaNeue.woff2') format('woff2'),
+         url('path-to-your-fonts/HelveticaNeue.woff') format('woff');
+}
 
+body {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
 nav {
     font-family: Helvetica Neue, Helvetica;
     background: #323232;
