--- a/intento.css
+++ b/intento.css
@@ -5,6 +5,7 @@
     list-style: none;
     box-sizing: border-box;
 }
+
 @font-face {
     font-family: 'Helvetica Neue';
     src: url('path-to-your-fonts/HelveticaNeue.woff2') format('woff2'),
@@ -17,12 +18,12 @@ body {
 nav {
     font-family: Helvetica Neue, Helvetica;
     background: #323232;
-    height: 80px;
+    height: 50px;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 20px; /* Ajusta según sea necesario */
+    padding: 0 15px; /* Ajusta según sea necesario */
     position: relative;
     z-index: 2;
 }
@@ -35,7 +36,7 @@ nav {
 }
 
 .logo {
-    height: 60px;
+    height: 50px;
 }
 
 .mid-text {
@@ -133,8 +134,8 @@ video {
     left: 0;
     width: 100%;
     height: 100%;
-    background: #1c1c1d;
-    opacity: 0.5;
+    background: #c7c40d;
+    opacity: 0.9;
     mix-blend-mode: overlay;
 }
 
@@ -214,4 +215,84 @@ video {
     #check:checked ~ ul {
         left: 0;
     }
+}
+footer {
+    background-color: #323232;
+    color: #fff;
+    padding: 2px 0;
+    text-align: center;
+    width: 100%;
+    position: relative;
+    overflow: hidden; /* Asegura que no haya overflow */
+}
+
+.footer-content {
+    display: flex;
+    flex-direction: row; /* Alinea los elementos en fila */
+    align-items: center;
+    justify-content: center; /* Centra los elementos horizontalmente */
+    flex-wrap: wrap; /* Permite que los elementos se muevan a la siguiente línea si es necesario */
+}
+
+.footer-content p {
+    margin: 0 10px; /* Añade margen entre la ubicación y los iconos */
+    font-size: 14px;
+    flex-shrink: 0; /* Evita que el texto se encoja */
+}
+
+.social-icons {
+    display: flex;
+    margin-top: 0; /* Elimina el margen superior */
+    margin-left: 10px; /* Añade margen entre el texto y los iconos */
+}
+
+.social-icon {
+    margin: 0 10px;
+    color: #fff;
+    font-size: 20px;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.social-icon:hover {
+    color: #000090;
+}
+
+@media (max-width: 768px) {
+    .footer-content {
+        flex-direction: column;
+        text-align: center;
+    }
+    
+    .footer-content p, .social-icons {
+        margin: 5px 0;
+    }
+    
+    .social-icon {
+        margin: 5px;
+        font-size: 18px;
+    }
+}
+.search-bar {
+    position: relative;
+    top:30px;
+    z-index: 1;
+    margin-left: 100px; /* Para empujar la barra de búsqueda a la derecha */
+    margin-right: 200px; /* Ajusta el margen según sea necesario */
+    display: flex;
+    align-items: center;
+}
+
+.search-bar input {
+    padding: 10px 15px;
+    font-size: 16px;
+    border-radius: 20px; /* Hace que los bordes sean redondeados */
+    border: 1px solid #ccc; /* Color del borde */
+    width: 350px; /* Ajusta el ancho según sea necesario */
+    outline: none; /* Remueve el borde azul en foco */
+    transition: border-color 0.3s;
+}
+
+.search-bar input:focus {
+    border-color: #000090; /* Color del borde cuando está enfocado */
 }
