--- a/intento.css
+++ b/intento.css
@@ -134,8 +134,8 @@ video {
     left: 0;
     width: 100%;
     height: 100%;
-    background: #c7c40d;
-    opacity: 0.9;
+    background: rgb(252, 248, 6);
+    opacity: 0.5;
     mix-blend-mode: overlay;
 }
 
@@ -193,7 +193,7 @@ video {
         width: 100%;
         height: 100vh;
         background: #2c3e50;
-        top: 40px;
+        top:40px;
         left: -100%;
         transition: all .5s;
     }
