--- a/prueba.css
+++ b/prueba.css
@@ -126,8 +126,8 @@ video {
     left: 0;
     width: 100%;
     height: 100%;
-    background: #1c1c1d;
-    opacity: 1.9;
+    background: #cb0909;
+    opacity: 0.5;
     mix-blend-mode: overlay;
 }
 
@@ -185,7 +185,7 @@ video {
         width: 100%;
         height: 100vh;
         background: #2c3e50;
-        top: 40px;
+        top: 80px;
         left: -100%;
         transition: all .5s;
     }
